force-app/main/default/objects/City_Master_Data__c/City_Master_Data__c.object-meta.xml
<CustomObject>
    <label>Master City</label>
    <nameField>
        <label>City Master Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master City</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>