force-app/main/default/objects/City_Master_Data__c/fields/Asset_City_Kabupaten__c.field-meta.xml
<CustomField>
    <fullName>Asset_City_Kabupaten__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset City/Kabupaten</label>
    <type>Text</type>
</CustomField>