force-app/main/default/objects/City_Master_Data__c/fields/confins_city__c.field-meta.xml
<CustomField>
    <fullName>confins_city__c</fullName>
    <label>confins_city</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>