force-app/main/default/objects/City_Master_Data__c/fields/Domicile_City_Kabupaten_Formula__c.field-meta.xml
<CustomField>
    <fullName>Domicile_City_Kabupaten_Formula__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domicile City/Kabupaten</label>
    <type>Text</type>
</CustomField>