force-app/main/default/objects/City_Master_Data__c/fields/Province_Id__c.field-meta.xml
<CustomField>
    <fullName>Province_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Province Id</label>
    <referenceTo>Province_Master_Data__c</referenceTo>
    <relationshipLabel>Cities Master Data</relationshipLabel>
    <relationshipName>Cities_Master_Data</relationshipName>
    <type>Lookup</type>
</CustomField>