force-app/main/default/objects/City_Master_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Province_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>